Fix image stretching

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ li {
 img,
 picture,
 svg {
+    object-fit: cover;
     max-width: 100%;
     display: block;
 }
@@ -740,8 +741,9 @@ footer {
 }
 
 .robot-tile img {
-    max-width: 600px;
+    object-fit: cover;
     width: 100%;
+    max-width: 600px;
     height: auto;
 }
 
